--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,7 @@
     "download": "Télécharger",
     "info": "Informations",
     "references": "References are a set of information used to specify the context of the measurement or observation. To describe a reference, we list the names of the desired columns and specify the list of columns that form the natural key.",
+    "validation": "It is necessary to have at least one column in the repository.",
     "visualization": "Visualisation"
   },
   "application": {
