--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -8,6 +8,7 @@
     "download": "Télécharger",
     "info": "Informations",
     "references": "Les référentiels sont un ensemble d'informations permettant de préciser le contexte de la mesure ou de l'observation. Pour décrire un référentiel, on y liste les noms des colonnes souhaitées et précisant la liste des colonnes qui forment la clé naturelle.",
+    "validation": "Il est nécessaire d'avoir au moins une colonne dans le référentiel.",
     "visualization": "Visualisation"
   },
   "application": {
