Ajout d'un bouton pour reprendre le travail en cours

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -30,6 +30,7 @@
     "add": "Ajouter {0}",
     "cancel": "Annuler",
     "close": "Fermer",
+    "continue": "Continuer {0}",
     "dataType": "Type de données",
     "delete": "Supprimer",
     "download": "Télécharger",
