--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,7 @@
     "add": "Add {1}",
     "cancel": "Cancel",
     "close": "Close",
+    "continue": "Continue {1}",
     "dataType": "Data type",
     "delete": "Delete",
     "download": "Download",
